fix name and small screen nav alignment

--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -4,8 +4,8 @@ nav {
   top: 0;
   width: 300px;
   img {
-    width: 300px;
-    margin: 45px 0 0 0;
+    width: 280px;
+    margin: 45px 0 0 20px;
     padding: 0;
     float: left;
     &.social {
